--- a/krohalev/templates/includes/mainContent.html
+++ b/krohalev/templates/includes/mainContent.html
@@ -318,18 +318,18 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                            <div class="project" style="background-image: url({% static 'images/img-1.jpg'%});">
-                                <div class="desc">
-                                    <div class="con">
-                                        <h3><a href="#">Веб-сайт</a></h3>
-                                        <span>Кондитерский интернет-магазин</span><br>
-                                        <span>(дорабатывается)</span>
+<!--                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">-->
+<!--                            <div class="project" style="background-image: url({% static 'images/img-1.jpg'%});">-->
+<!--                                <div class="desc">-->
+<!--                                    <div class="con">-->
+<!--                                        <h3><a href="#">Веб-сайт</a></h3>-->
+<!--                                        <span>Кондитерский интернет-магазин</span><br>-->
+<!--                                        <span>(дорабатывается)</span>-->
 
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                             <div class="project" style="background-image: url({% static 'images/img-2.jpg'%});">
                                 <div class="desc">
